--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -97,3 +97,105 @@ nav ul li{
   color: black;
   font-weight: bold;
 }
+
+/*Icons Section*/
+.icons{
+  background-color: white;
+  color: black;
+  justify-content: space-between;
+  text-align: center;
+  max-width: 30rem;
+  display: flex;
+  margin: 3.5rem auto 0rem auto;
+  flex-direction: row;
+}
+
+.icon_box{
+  display: flex;
+  height: 8rem;
+  flex-direction: column;
+  /*margin-right: 6em;*/
+  justify-content: center;
+}
+
+.icon_box.paper{
+  display: block;
+  text-align: center;
+}
+
+.icon_box.paper img{
+  width: 3.5rem;
+}
+
+.icon_box.ruler{
+  display: block;
+  text-align: center;
+  max-height: 5rem;
+}
+
+.icon_box.ruler img{
+  max-width: 5rem;
+}
+
+.icon_box.text{
+  display: block;
+  text-align: center;
+  max-height: 3rem;
+}
+.icon_box.text p{
+  text-align: center;
+}
+
+/*Blue Boxes*/
+
+.blue_boxes{
+  width: 75%;
+  display: flex;
+  margin: 2rem auto 0rem auto;
+  /*justify-content: space-between;*/
+}
+
+.box{
+  width: 35%;
+  display: flex;
+  flex-direction: column;
+  margin-right: 5%;
+
+}
+
+.box.blue_stripe{
+  background-color: cadetblue;
+  padding: 0.5rem 1.25rem;
+  width: 10rem;
+}
+
+.box.blue_stripe p{
+  font-weight: bold;
+  font-size: 1rem;
+  color: white;
+}
+
+.box.text{
+  display:block;
+  margin-top: 1rem;
+  width: 100%;
+}
+
+.box.text p{
+
+}
+
+.azure_strip{
+  margin-top: 5rem;
+  background-color: azure;
+  align-items: center;
+}
+
+.azure_strip img{
+  margin: 4rem 1rem 4rem 4rem;
+  height: 1.5rem;
+}
+
+.azure_strip p{
+
+}
